# blog-server

./: Cargo.toml  diesel.toml
migrations/2024-10-17-085739_create_users/: up.sql
migrations/2024-10-17-085826_create_posts/: up.sql
src/: lib.rs  main.rs
src/db/: connection.rs  models.rs  schema.rs
src/mail/: mod.rs  send.rs
src/mail/templates/: verification.rs
src/middlewares/: auth.rs
src/services/: posts.rs  test.rs  users.rs
src/utils/: hashing.rs
